fixed some mistakes