@@ -1,11 +1,10 @@
 package com.chatapp.group.entity;
 
 import com.chatapp.group.components.Category;
+import com.chatapp.group.components.Member;
 import com.chatapp.group.components.Role;
 import com.chatapp.group.components.RoleType;
 import com.chatapp.group.dto.GroupDto;
-import com.chatapp.group.exceptions.CustomException;
-import com.chatapp.group.exceptions.ExceptionResource;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.Setter;
@@ -15,8 +14,10 @@ import org.modelmapper.ModelMapper;
 import org.modelmapper.convention.MatchingStrategies;
 
 import javax.persistence.*;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.UUID;
 
 @Entity
 @Table(name = "groups")
@@ -34,25 +35,28 @@ public class GroupEntity {
     private String avatar;
     private UUID ownerId;
 
-    @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true)
-    @JoinColumn(name = "group_id")
+    @OneToMany(mappedBy = "groupEntity", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
     @ToString.Exclude
     private List<Category> categories = new ArrayList<>();
 
-    @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true)
-    @JoinColumn(name = "group_id")
+    @OneToMany(mappedBy = "groupEntity", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
     @ToString.Exclude
     private List<Role> roles = new ArrayList<>();
 
-    @ElementCollection
-    @Column(name = "user_id", nullable = false)
-    @CollectionTable(name = "group_users_mapping", joinColumns = @JoinColumn(name = "group_id"))
+    @OneToMany(mappedBy = "groupEntity", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
     @ToString.Exclude
-    private List<UUID> usersId = new ArrayList<>();
+    private List<Member> members = new ArrayList<>();
 
+    public void deleteRole(Role role) {
+        roles.remove(role);
+    }
+
+    public void deleteAllRoles() {
+        roles = new ArrayList<>();
+    }
 
     public List<Role> getGeneratedRoles() {
-        return this.roles.stream().filter(Role::isGenerated).collect(Collectors.toList());
+        return this.roles.stream().filter(Role::isGenerated).toList();
     }
 
     public GroupDto.Display toDisplay() {
@@ -81,11 +85,13 @@ public class GroupEntity {
     }
 
     public void addCategory(Category category) {
+        category.setGroupEntity(this);
         this.categories.add(category);
     }
 
-    public void addUser(UUID userId) {
-        this.usersId.add(userId);
+    public void addMember(Member member) {
+        member.setGroupEntity(this);
+        this.members.add(member);
     }
 
     public void addRole(Role role) {
